test/error/iface/err4.rzy

Sub = Component
  funcA : signal();
  funcB : signal();
elementary
end

Err4 = Component
  funcA : signal();
  funcB : signal();
  funcC : signal();
    
composition
  a : Sub;

  a.funcA -> funcA;
  a.funcB -> funcB;
  a.funcC -> funcC;
end

